# C9xComplex

./: c9x-complex.tgz  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/vaca/c9xcomplex/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  vaca.cpp
app/src/main/cpp/c9x-complex/: celefund.h  celefunf.h  cgamma.c  cgammaf.c  cgammal.c  clog.c  clogf.c  clogl.c  cmplx.c  cmplxf.c  cmplxl.c  complex.h  cpolylog.c  cvect.c  dccalc.c  dccalc.h  mconf.h  protos.h  stubs.c
app/src/main/java/com/vaca/c9xcomplex/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/vaca/c9xcomplex/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
